[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/BasicSideButton.png" type="Texture" id=1]
[ext_resource path="res://Scenes/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HUD/TravelButton.gd" type="Script" id=3]

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TravelRightWarn" type="TextureButton" parent="Control"]
visible = false
modulate = Color( 1, 1, 1, 0.4 )
anchor_left = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
disabled = true
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="TravelRight" type="TextureButton" parent="Control"]
visible = false
anchor_left = 0.94
anchor_right = 1.0
anchor_bottom = 1.0
disabled = true
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true
script = ExtResource( 3 )

[node name="TravelLeftWarn" type="TextureButton" parent="Control"]
visible = false
modulate = Color( 1, 1, 1, 0.4 )
anchor_right = 0.08
anchor_bottom = 1.0
disabled = true
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="TravelLeft" type="TextureButton" parent="Control"]
visible = false
anchor_right = 0.06
anchor_bottom = 1.0
disabled = true
texture_hover = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true
script = ExtResource( 3 )

[node name="LocationPanel" type="Panel" parent="Control"]
anchor_right = 0.087
anchor_bottom = 0.122
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Control/LocationPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="DayPanel" type="Panel" parent="Control"]
anchor_left = 0.106
anchor_right = 0.199
anchor_bottom = 0.122
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Control/DayPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Day 0"
align = 1
valign = 1

[node name="GrowButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -210.0
margin_top = 5.0
margin_right = -118.0
margin_bottom = 29.0
rect_clip_content = true
button_mask = 3
text = "Grow"
clip_text = true

[node name="NextDayButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -210.0
margin_top = 37.0
margin_right = -118.0
margin_bottom = 61.0
text = "Sleep"
clip_text = true

[node name="InventoryPanel" type="Panel" parent="Control"]
anchor_left = 0.217
anchor_right = 0.776
anchor_bottom = 0.124
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InventoryLabel" type="Label" parent="Control/InventoryPanel"]
anchor_right = 0.214669
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.505882, 0.537255, 0.807843, 1 )
text = "Inventory"
align = 1
valign = 1

[node name="FlowersLabel" type="Label" parent="Control/InventoryPanel"]
anchor_left = 0.245081
anchor_right = 0.486583
anchor_bottom = 1.0
text = "Flowers: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CoinLabel" type="Label" parent="Control/InventoryPanel"]
anchor_left = 0.504472
anchor_right = 0.708408
anchor_bottom = 1.0
text = "Coins: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Control/GrowButton" to="." method="_on_GrowButton_pressed"]
[connection signal="pressed" from="Control/NextDayButton" to="." method="_on_NextDayButton_pressed"]
